postgresql.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  ports:
  - port: 5432
  selector:
    app: postgresql
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  serviceName: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - args:
        image: postgres:latest
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgresql
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-persistent-storage
        - mountPath: /docker-entrypoint-initdb.d
          name: init-db
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-pvc
      - configMap:
          name: postgresql-init-db
        name: init-db
